--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* * {
+    border: solid 1px red;
+    background-color: black !important;
+    color: white !important;
+} */
