add routing and html for form

--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -5,17 +5,59 @@
         <h5 class="titel">Ürün Ekle</h5>
         <div class="card-body">
           <form [formGroup]="productAddForm">
-            <div class="form-group">
-              <input
-                type="text"
-                id="productName"
-                formControlName="productName"
-                class="form-control"
-                placeholder="Ürün Adi"
-              />
+            <div class="mb-3">
+              <label for="productName">Ürün Adi</label>
+              <div class="form-group">
+                <input
+                  type="text"
+                  id="productName"
+                  formControlName="productName"
+                  class="form-control"
+                  placeholder="Ürün Adi"
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="categoryId">Category Id</label>
+              <div class="form-group">
+                <input
+                  type="number"
+                  id="categoryId"
+                  formControlName="categoryId"
+                  class="form-control"
+                  placeholder="Category Id"
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="unitsInStock">Units In Stock</label>
+              <div class="form-group">
+                <input
+                  type="number"
+                  id="unitsInStock"
+                  formControlName="unitsInStock"
+                  class="form-control"
+                  placeholder="Units In Stock"
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="unitPrice">Units Price</label>
+              <div class="form-group">
+                <input
+                  type="number"
+                  id="unitPrice"
+                  formControlName="unitPrice"
+                  class="form-control"
+                  placeholder="Units Price"
+                />
+              </div>
             </div>
           </form>
         </div>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-primary" (click)="add()"></button>
       </div>
     </div>
   </div>
