--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary" (click)="add()"></button>
+        <button class="btn btn-primary" (click)="add()">add</button>
       </div>
     </div>
   </div>
